create order docs: update result type
