# docs/swagger.json
@@ -441,10 +441,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Order"
-                            }
+                            "$ref": "#/definitions/models.Order"
                         }
                     }
                 }
